--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         }
         #touchpad {
             position: fixed;
-            bottom: 0;
+            bottom: 10px; /* Сенсорная зона на 10px ниже нижней границы холста */
             left: 50%; /* Центрируем по горизонтали */
             transform: translateX(-50%); /* Смещаем на половину ширины */
-            width: var(--game-width); /* Ширина сенсорной зоны равна ширине игрового поля */
+            width: calc(var(--game-width) + 4px); /* Ширина сенсорной зоны равна ширине холста + 4px (рамка) */
             height: 15vh; /* Высота сенсорной зоны */
             background-color: rgba(255, 255, 255, 0.1);
             border-radius: 10px; /* Закругленные углы */
@@ -812,7 +812,7 @@
             canvas.style.transform = 'translateX(-50%)'; // Смещаем на половину ширины холста
             canvas.style.top = '0';
 
-            // Устанавливаем ширину сенсорной зоны равной ширине холста
+            // Устанавливаем ширину сенсорной зоны равной ширине холста + 4px (рамка)
             document.documentElement.style.setProperty('--game-width', `${gameWidth}px`);
 
             // Пересчитываем позицию игрока, чтобы он оставался по центру внизу
