--- a/index.html
+++ b/index.html
@@ -364,6 +364,53 @@
             }
         });
 
+        // Функция для создания черного взрыва
+        function createBlackExplosion(x, y) {
+            explosions.push({
+                x,
+                y,
+                radius: 5,
+                maxRadius: 40, // Увеличиваем радиус для большего эффекта
+                alpha: 1,
+                duration: 60, // Продолжительность 3 секунды (60 кадров при 20 FPS)
+                color: 'rgba(0, 0, 0, 1)' // Черный цвет
+            });
+        }
+
+        // Функция для отключения управления
+        function disableControls() {
+            canvas.removeEventListener('touchstart', handleCanvasTouch);
+            touchpad.removeEventListener('touchstart', handleTouchStart);
+            touchpad.removeEventListener('touchmove', handleTouchMove);
+            touchpad.removeEventListener('touchend', handleTouchEnd);
+        }
+
+        // Функция для завершения игры
+        function endGame() {
+            if (isGameEnding) return; // Если игра уже завершается, выходим
+            isGameEnding = true;
+
+            // Создаем черный взрыв по периметру зоны игрока
+            createBlackExplosion(player.x + player.width / 2, player.y + player.height / 2);
+
+            // Отключаем управление
+            disableControls();
+
+            // Воспроизводим звук взрыва
+            const explosionSound = document.getElementById('explosionSound');
+            explosionSound.currentTime = 0;
+            explosionSound.play();
+
+            // Ждем 3 секунды, затем переходим в меню
+            setTimeout(() => {
+                updateHighScore();
+                stopBackgroundMusic();
+                updateScoreboard();
+                document.getElementById('scoreModal').style.display = 'flex';
+                isGameEnding = false; // Сбрасываем флаг завершения игры
+            }, 3000);
+        }
+
         function getRandomEnemyType() {
             const random = Math.random();
             let cumulativeProbability = 0;
@@ -601,7 +648,7 @@
             explosions.forEach((explosion, index) => {
                 ctx.beginPath();
                 ctx.arc(explosion.x, explosion.y, explosion.radius, 0, Math.PI * 2);
-                ctx.fillStyle = `rgba(255, 100, 0, ${explosion.alpha})`;
+                ctx.fillStyle = explosion.color || `rgba(255, 100, 0, ${explosion.alpha})`; // Используем черный цвет, если он задан
                 ctx.fill();
 
                 explosion.radius += 1;
@@ -854,10 +901,11 @@
 
         function gameLoop() {
             if (gameOver || player.health <= 0) {
-                updateHighScore();
-                stopBackgroundMusic();
-                updateScoreboard();
-                document.getElementById('scoreModal').style.display = 'flex';
+                if (!isGameEnding) {
+                    endGame(); // Запускаем завершение игры
+                }
+                drawExplosions(); // Отрисовываем взрывы
+                requestAnimationFrame(gameLoop);
                 return;
             }
 
@@ -867,6 +915,7 @@
                 return;
             }
 
+            // Остальная логика игры
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawBackground();
             drawPlayer();
